"rendez-vous" flow
